--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/* formatting the text and colors for the header */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -19,11 +19,11 @@ body {
     display: inline-block;
     font-size: 48px;
 }
-
+/* this differentiates the text they want to be grey */
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* formatting the items in the nav */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -46,7 +46,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* formatting the main image on the page */
 .hero {
     height: 800px;
     width: 100%;
@@ -55,23 +55,23 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* This makes the pictures inside the boxes go to the left side */
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/* This makes the pictures inside the boxes go to the right side */
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/* formatting the three boxes on the left */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 25px;
 }
-
+/* formatting for the box on the right side of the page */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -87,7 +87,7 @@ aside figure {
     margin-bottom: 50px;
     color: #ffffff;
 }
-
+/* Condensed the different selectors to all fit in one category */
 h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -111,7 +111,7 @@ section figure {
 section figure img {
     max-height: 200px;
 }
-
+/* this pushed the text to be on two seperate lines like the example */
 section h2 {
     margin-bottom: 20px;
     margin-right: 200px;
@@ -121,7 +121,7 @@ section h2 {
 .online-reputation-management h2 {
     margin-right: 600px;
 }
-
+/* formatting the footer */
 .footer {
     padding: 30px;
     clear: both;
